--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -9,6 +9,5 @@
 @import "layouts/homepage";
 
 // Components
-@import "components/background";
-@import "components/greeting";
-@import "components/quote";
+@import "components/menu";
+@import "components/search-bar";
