--- a/src/css/config/_global.scss
+++ b/src/css/config/_global.scss
@@ -1,6 +1,27 @@
+html {
+  font-size: 62.5%
+}
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  font-family: $font-main;
-  background-color: $color-main;
   position: relative;
-  height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  background-color:$color-background;
+  overflow-x: hidden;
+}
+
+.container {
+  position: relative;
+  box-sizing: border-box;
+  max-width: 1000px;
+  width: calc(100% - 40px);
+  margin-left: auto;
+  margin-right: auto;
 }
