--- a/src/css/components/_menu.scss
+++ b/src/css/components/_menu.scss
@@ -15,6 +15,10 @@
   font-weight: 600;
   font-size: 2rem;
   margin: 0 3rem;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .menu nav a:hover {
