--- a/src/parts/components/menu.hbs
+++ b/src/parts/components/menu.hbs
@@ -1,6 +1,6 @@
 <img src="/src/img/logo.png" alt="Logo Rick and morty">
 <nav>
-  <a href="#">Characters</a>
+  <a href="characters.html">Characters</a>
   <a href="#">Locations</a>
   <a href="#">Episodes</a>
 </nav>
