--- a/src/templates/menu.hbs
+++ b/src/templates/menu.hbs
@@ -1,4 +1,6 @@
-<img src="/src/img/logo.png" alt="Logo Rick and morty">
+<a href="/">
+  <img src="/src/img/logo.png" alt="Logo Rick and morty">
+</a>
 <nav>
   <a href="characters.html">Characters</a>
   <a href="#">Locations</a>
