mise en place des données dans les personnages

--- a/src/css/components/_search-bar.scss
+++ b/src/css/components/_search-bar.scss
@@ -12,7 +12,7 @@
     height: 6rem;
     border-radius: 5rem;
     user-select: none;
-    background-color: #636363;
+    background-color: $color-grey;
     color: #373333;
     border: none;
     box-shadow: 0px 4px 25px 10px rgba(0, 0, 0, 0.25);
