--- a/src/templates/character.hbs
+++ b/src/templates/character.hbs
@@ -1,3 +1,20 @@
-<div class="box">
-  Je suis un perso {{{ name }}}
+<img src="{{ image }}" alt="Image du personnage">
+<h2>{{{ name }}}</h2>
+<h3>{{{ species }}}</h3>
+
+<div class="informations">
+  <ul>
+    <li>
+      <h4>Gender</h4>
+      <p>{{{ gender }}}</p>
+    </li>
+    <li>
+      <h4>Origin location</h4>
+      <p>{{{ origin }}}</p>
+    </li>
+    <li>
+      <h4>First seen in</h4>
+      <p>{{{ episode }}}</p>
+    </li>
+  </ul>
 </div>
