--- a/src/css/components/_search-bar.scss
+++ b/src/css/components/_search-bar.scss
@@ -7,6 +7,11 @@
   display: flex;
   align-items: center;
 
+  &.search-bar__characters {
+    margin-top: 10rem;
+    margin-bottom: 8rem;;
+  }
+
 
   input {
     height: 6rem;
