--- a/src/templates/character.hbs
+++ b/src/templates/character.hbs
@@ -1,5 +1,5 @@
 <img src="{{ image }}" alt="Image du personnage">
-<h2>{{{ name }}}</h2>
+<h2><span>{{{ name }}}</span></h2>
 <h3>{{{ species }}}</h3>
 
 <div class="informations">
