--- a/src/templates/menu.hbs
+++ b/src/templates/menu.hbs
@@ -3,6 +3,6 @@
 </a>
 <nav>
   <a href="characters.html">Characters</a>
-  <a href="#">Locations</a>
+  <a href="locations.html">Locations</a>
   <a href="#">Episodes</a>
 </nav>
