--- a/src/templates/search.hbs
+++ b/src/templates/search.hbs
@@ -1,2 +1,2 @@
-<input type="text" name="search_bar" placeholder="{{{ placeholder }}}">
+<input type="text" name="search_bar" id="test" placeholder="{{{ placeholder }}}">
 <div class="search-icon"></div>
