Ajout page locations et episodes

--- a/src/templates/menu.hbs
+++ b/src/templates/menu.hbs
@@ -4,5 +4,5 @@
 <nav>
   <a href="characters.html">Characters</a>
   <a href="locations.html">Locations</a>
-  <a href="#">Episodes</a>
+  <a href="episodes.html">Episodes</a>
 </nav>
