--- a/src/templates/character.hbs
+++ b/src/templates/character.hbs
@@ -21,5 +21,5 @@
 
 <div class="status">
   <div class="color"></div>
-  <p>{{{ status }}}</p>
+  <p class="status__character">{{{ status }}}</p>
 </div>
