--- a/src/css/layouts/_characters.scss
+++ b/src/css/layouts/_characters.scss
@@ -1,21 +1,4 @@
-.characters {
-  position: relative;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 5em;
-  justify-content: center;
-}
 
-.character {
-  position: relative;
-  background-color: $color-grey;
-  border-radius: 3rem;
-  width: 25vw;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden;
-}
 
 .character img {
   display: block;
@@ -24,21 +7,7 @@
   margin-bottom: 2rem;
   margin-left: auto;
   margin-right: auto;
-}
-
-.character h2, h3 {
-  font-weight: 600;
-  color: white;
-  text-align: center;
-}
-
-.character h2 {
-  font-size: 2.5rem;
-}
-
-.character h3 {
-  font-size: 1.8rem;
-  margin-top: 1rem;
+  list-style-type: none;
 }
 
 .character .informations ul {
@@ -46,10 +15,6 @@
   margin-bottom: 2rem;
   & li {
     margin: 1rem auto;
-  }
-  & h4 {
-    font-size: 1.7rem;
-    color: #E4E4E4;
   }
   & p {
     font-size: 1.7rem;
